--- a/blog-single.html
+++ b/blog-single.html
@@ -210,23 +210,23 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="index.html" class="menu--link">
-                                                            Home-1
+                                                        <a href="home.html" class="menu--link">
+                                                            Main Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-2.html" class="menu--link">
-                                                            Home-2
+                                                        <a href="help-desk-home.html" class="menu--link">
+                                                            Help Desk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-3.html" class="menu--link">
-                                                            Home-3
+                                                        <a href="focused-helpdesk-home.html" class="menu--link">
+                                                            Focused Helpdesk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-4.html" class="menu--link">
-                                                            Home-4
+                                                        <a href="support-forum-home.html" class="menu--link">
+                                                            Support Forum Home
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -418,7 +418,7 @@
                 </div>
                 <!-- end page-menu section -->
 
-                <section class="single-blog-section section-padding">
+                <section class="single-blog-section section-padding overflow-visible">
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-8">
@@ -552,7 +552,7 @@
                             </div>
                             <!-- col end -->
                             <div class="col-xl-4">
-                                <div class="sidebar-widget-wrapper">
+                                <div class="sidebar-widget-wrapper stickyx">
                                     <div class="widget-search wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="200ms">
                                         <h3 class="title">Search</h3>
                                         <div class="widget-content-wrapper d-flex align-items-center">
