--- a/faq.html
+++ b/faq.html
@@ -210,23 +210,23 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="index.html" class="menu--link">
-                                                            Home-1
+                                                        <a href="home.html" class="menu--link">
+                                                            Main Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-2.html" class="menu--link">
-                                                            Home-2
+                                                        <a href="help-desk-home.html" class="menu--link">
+                                                            Help Desk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-3.html" class="menu--link">
-                                                            Home-3
+                                                        <a href="focused-helpdesk-home.html" class="menu--link">
+                                                            Focused Helpdesk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-4.html" class="menu--link">
-                                                            Home-4
+                                                        <a href="support-forum-home.html" class="menu--link">
+                                                            Support Forum Home
                                                         </a>
                                                     </li>
                                                 </ul>
