--- a/help-desk-home.html
+++ b/help-desk-home.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>docfi | Home 2</title>
+    <title>docfi | Help Desk Home</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/fav.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/fav-2.png">
 
     <!-- Dependency Stylesheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -192,11 +192,11 @@
                                 <div id="header-content-wrap" class="header-content-wrap d-flex align-items-center justify-content-between navbar-wrap flex-wrap"
                                     >
                                     <div class="header-logo">
-                                        <a href="index.html">
+                                        <a href="index-2.html">
                                             <img src="images/logo/logo-2.svg" alt="header-logo" width="191" height="52">
                                         </a>
                                         <a href="index.html" class="sticky-header-logo">
-                                            <img src="images/logo/logo-5.svg" alt="header-logo" width="191" height="52">
+                                            <img src="images/logo/logo-2.svg" alt="header-logo" width="191" height="52">
                                         </a>
                                     </div>
                                         
@@ -211,23 +211,23 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="index.html" class="menu--link">
-                                                            Home-1
+                                                        <a href="home.html" class="menu--link">
+                                                            Main Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-2.html" class="menu--link">
-                                                            Home-2
+                                                        <a href="help-desk-home.html" class="menu--link">
+                                                            Help Desk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-3.html" class="menu--link">
-                                                            Home-3
+                                                        <a href="focused-helpdesk-home.html" class="menu--link">
+                                                            Focused Helpdesk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-4.html" class="menu--link">
-                                                            Home-4
+                                                        <a href="support-forum-home.html" class="menu--link">
+                                                            Support Forum Home
                                                         </a>
                                                     </li>
                                                 </ul>
