--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>docfi | Home 1</title>
+    <title>docfi | Home</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="images/fav.png">
@@ -191,10 +191,10 @@
                                 <div id="header-content-wrap" class="header-content-wrap d-flex align-items-center justify-content-between navbar-wrap flex-wrap"
                                     >
                                     <div class="header-logo">
-                                        <a href="index.html">
+                                        <a href="home.html">
                                             <img src="images/logo/logo-1.svg" alt="header-logo" width="191" height="52">
                                         </a>
-                                        <a href="index.html" class="sticky-header-logo">
+                                        <a href="home.html" class="sticky-header-logo">
                                             <img src="images/logo/logo-5.svg" alt="header-logo" width="191" height="52">
                                         </a>
                                     </div>
@@ -210,23 +210,23 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="index.html" class="menu--link">
-                                                            Home-1
+                                                        <a href="home.html" class="menu--link">
+                                                            Main Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-2.html" class="menu--link">
-                                                            Home-2
+                                                        <a href="help-desk-home.html" class="menu--link">
+                                                            Help Desk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-3.html" class="menu--link">
-                                                            Home-3
+                                                        <a href="focused-helpdesk-home.html" class="menu--link">
+                                                            Focused Helpdesk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-4.html" class="menu--link">
-                                                            Home-4
+                                                        <a href="support-forum-home.html" class="menu--link">
+                                                            Support Forum Home
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -1079,7 +1079,7 @@
                 <!-- end best online-documentation section -->
 
                 <!-- start testimonial-section -->
-                <section class="testimonial-section section-padding rt-color-bg">
+                <section class="testimonial-section testimonial-section--style-1 section-padding rt-color-bg">
                     <div class="container">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-sm-12 col-md-12 col-xl-6">
