--- a/single-element.html
+++ b/single-element.html
@@ -210,23 +210,23 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="index.html" class="menu--link">
-                                                            Home-1
+                                                        <a href="home.html" class="menu--link">
+                                                            Main Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-2.html" class="menu--link">
-                                                            Home-2
+                                                        <a href="help-desk-home.html" class="menu--link">
+                                                            Help Desk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-3.html" class="menu--link">
-                                                            Home-3
+                                                        <a href="focused-helpdesk-home.html" class="menu--link">
+                                                            Focused Helpdesk Home
                                                         </a>
                                                     </li>
                                                     <li class="menu--item second-level">
-                                                        <a href="index-4.html" class="menu--link">
-                                                            Home-4
+                                                        <a href="support-forum-home.html" class="menu--link">
+                                                            Support Forum Home
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -391,7 +391,7 @@
                                         </p>
                                     </div>
 
-                                    <div class="searchbox-container searchbox-container--style-1 d-flex justify-content-between align-items-center">
+                                    <div class="searchbox-container searchbox-container--style-1 d-flex justify-content-between align-items-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
                                                 <div class="input-area d-flex align-items-center">
@@ -413,7 +413,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="search-text">
+                                    <div class="search-text wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="900ms">
                                         <p><span>Popular:</span> Code, Basic, Price, <a href="">WordPress</a></p>
                                     </div>
                                 </div>
