Add content table design to single-element page

--- a/blog-list.html
+++ b/blog-list.html
@@ -210,7 +210,7 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="home.html" class="menu--link">
+                                                        <a href="index.html" class="menu--link">
                                                             Main Home
                                                         </a>
                                                     </li>
@@ -249,6 +249,16 @@
                                                             Single Element
                                                         </a>
                                                     </li>
+                                                    <li class="menu--item">
+                                                        <a href="two-columns.html" class="menu--link">
+                                                            Two Columns Page
+                                                        </a>
+                                                    </li>
+                                                    <li class="menu--item">
+                                                        <a href="three-columns.html" class="menu--link">
+                                                            Three Columns Page
+                                                        </a>
+                                                    </li>
                                                 </ul>
                                             </li>
                                             <li class="menu--item menu--item--has-child parent-menu">
@@ -279,16 +289,6 @@
                                                     </svg>
                                                 </a>
                                                 <ul class="menu menu--sub">
-                                                    <li class="menu--item">
-                                                        <a href="two-columns.html" class="menu--link">
-                                                            Two Columns Page
-                                                        </a>
-                                                    </li>
-                                                    <li class="menu--item">
-                                                        <a href="three-columns.html" class="menu--link">
-                                                            Three Columns Page
-                                                        </a>
-                                                    </li>
                                                     <li class="menu--item">
                                                         <a href="elements.html" class="menu--link">
                                                             Element Page
@@ -574,7 +574,7 @@
                                     </div>
                                 </div>
                                 <div class="see-more-btn-area text-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
-                                    <a href="" class="see-more-btn">
+                                    <a href="" class="coolBeans see-more-btn">
                                         See More
                                         <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M9.4849 12.6409C11.9874 11.9817 13.8307 9.70675 13.8307 7.00008C13.8307 3.78008 11.2407 1.16675 7.9974 1.16675C4.10656 1.16675 2.16406 4.41008 2.16406 4.41008M2.16406 4.41008V1.75008M2.16406 4.41008H3.33656H4.75406" stroke="#15C590" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
