--- a/help-desk-home.html
+++ b/help-desk-home.html
@@ -211,7 +211,7 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="home.html" class="menu--link">
+                                                        <a href="index.html" class="menu--link">
                                                             Main Home
                                                         </a>
                                                     </li>
@@ -250,6 +250,16 @@
                                                             Single Element
                                                         </a>
                                                     </li>
+                                                    <li class="menu--item">
+                                                        <a href="two-columns.html" class="menu--link">
+                                                            Two Columns Page
+                                                        </a>
+                                                    </li>
+                                                    <li class="menu--item">
+                                                        <a href="three-columns.html" class="menu--link">
+                                                            Three Columns Page
+                                                        </a>
+                                                    </li>
                                                 </ul>
                                             </li>
                                             <li class="menu--item menu--item--has-child parent-menu">
@@ -280,16 +290,6 @@
                                                     </svg>
                                                 </a>
                                                 <ul class="menu menu--sub">
-                                                    <li class="menu--item">
-                                                        <a href="two-columns.html" class="menu--link">
-                                                            Two Columns Page
-                                                        </a>
-                                                    </li>
-                                                    <li class="menu--item">
-                                                        <a href="three-columns.html" class="menu--link">
-                                                            Three Columns Page
-                                                        </a>
-                                                    </li>
                                                     <li class="menu--item">
                                                         <a href="elements.html" class="menu--link">
                                                             Element Page
@@ -1326,7 +1326,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="author-info">
-                                                        <h3 class="name">David Martin</h3>
+                                                        <h3 class="name">Ford Stefen</h3>
                                                         <p class="designation">Marketing Manager </p>
                                                     </div>
                                                 </div>
@@ -1355,7 +1355,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="author-info">
-                                                        <h3 class="name">David Martin</h3>
+                                                        <h3 class="name">Mickel Starck</h3>
                                                         <p class="designation">Marketing Manager </p>
                                                     </div>
                                                 </div>
