--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                                 <div id="header-content-wrap" class="header-content-wrap d-flex align-items-center justify-content-between navbar-wrap flex-wrap"
                                     >
                                     <div class="header-logo">
-                                        <a href="home.html">
+                                        <a href="index.html">
                                             <img src="images/logo/logo-1.svg" alt="header-logo" width="191" height="52">
                                         </a>
-                                        <a href="home.html" class="sticky-header-logo">
+                                        <a href="index.html" class="sticky-header-logo">
                                             <img src="images/logo/logo-5.svg" alt="header-logo" width="191" height="52">
                                         </a>
                                     </div>
@@ -210,7 +210,7 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="home.html" class="menu--link">
+                                                        <a href="index.html" class="menu--link">
                                                             Main Home
                                                         </a>
                                                     </li>
@@ -249,6 +249,16 @@
                                                             Single Element
                                                         </a>
                                                     </li>
+                                                    <li class="menu--item">
+                                                        <a href="two-columns.html" class="menu--link">
+                                                            Two Columns Page
+                                                        </a>
+                                                    </li>
+                                                    <li class="menu--item">
+                                                        <a href="three-columns.html" class="menu--link">
+                                                            Three Columns Page
+                                                        </a>
+                                                    </li>
                                                 </ul>
                                             </li>
                                             <li class="menu--item menu--item--has-child parent-menu">
@@ -279,16 +289,6 @@
                                                     </svg>
                                                 </a>
                                                 <ul class="menu menu--sub">
-                                                    <li class="menu--item">
-                                                        <a href="two-columns.html" class="menu--link">
-                                                            Two Columns Page
-                                                        </a>
-                                                    </li>
-                                                    <li class="menu--item">
-                                                        <a href="three-columns.html" class="menu--link">
-                                                            Three Columns Page
-                                                        </a>
-                                                    </li>
                                                     <li class="menu--item">
                                                         <a href="elements.html" class="menu--link">
                                                             Element Page
@@ -971,6 +971,7 @@
                                                 </p>
                                             </div>
                                         </div>
+                                        
                                         <div class="col-xl-6 item classima2 digeco2 child">
                                             <div class="rt-card rt-card--style-3 rt-color-shade1-bg rt-border-radius-style-1">
                                                 <div class="icon d-flex justify-content-center align-items-center rt-color-shade4-bg rt-border-radius-style-2">
