--- a/blog-single.html
+++ b/blog-single.html
@@ -210,7 +210,7 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="home.html" class="menu--link">
+                                                        <a href="index.html" class="menu--link">
                                                             Main Home
                                                         </a>
                                                     </li>
@@ -249,6 +249,16 @@
                                                             Single Element
                                                         </a>
                                                     </li>
+                                                    <li class="menu--item">
+                                                        <a href="two-columns.html" class="menu--link">
+                                                            Two Columns Page
+                                                        </a>
+                                                    </li>
+                                                    <li class="menu--item">
+                                                        <a href="three-columns.html" class="menu--link">
+                                                            Three Columns Page
+                                                        </a>
+                                                    </li>
                                                 </ul>
                                             </li>
                                             <li class="menu--item menu--item--has-child parent-menu">
@@ -279,16 +289,6 @@
                                                     </svg>
                                                 </a>
                                                 <ul class="menu menu--sub">
-                                                    <li class="menu--item">
-                                                        <a href="two-columns.html" class="menu--link">
-                                                            Two Columns Page
-                                                        </a>
-                                                    </li>
-                                                    <li class="menu--item">
-                                                        <a href="three-columns.html" class="menu--link">
-                                                            Three Columns Page
-                                                        </a>
-                                                    </li>
                                                     <li class="menu--item">
                                                         <a href="elements.html" class="menu--link">
                                                             Element Page
@@ -727,7 +727,9 @@
                                         <div class="comment-content">
                                             <div class="comment-content-top d-flex justify-content-between align-items-center">
                                                 <div class="commentor-info">
-                                                    <h4 class="commentor-name">David Marteen</h4>
+                                                    <h4>
+                                                        <a href="" class="commentor-name">David Marteen</a>
+                                                    </h4>
                                                     <div class="comment-meta">
                                                         <span class="comment-date-time">
                                                             24 minutes ago
@@ -736,8 +738,8 @@
                                                 </div>
                                                 <a href="" class="reply-btn d-flex align-items-center">
                                                     Reply
-                                                    <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M13.7539 5.95703L8.94141 10.0859C8.53125 10.4414 7.875 10.1406 7.875 9.59375V7.21484C3.60938 7.26953 1.80469 8.30859 3.03516 12.2734C3.17188 12.7109 2.625 13.0664 2.26953 12.793C1.06641 11.918 0 10.25 0 8.58203C0 4.42578 3.47266 3.52344 7.875 3.46875V1.30859C7.875 0.734375 8.53125 0.433594 8.94141 0.789062L13.7539 4.91797C14.0547 5.21875 14.0547 5.68359 13.7539 5.95703Z" fill="#1D2746"/>
+                                                    <svg width="15" height="14" viewBox="0 0 15 14" fill="#1D2746" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M13.7539 5.95703L8.94141 10.0859C8.53125 10.4414 7.875 10.1406 7.875 9.59375V7.21484C3.60938 7.26953 1.80469 8.30859 3.03516 12.2734C3.17188 12.7109 2.625 13.0664 2.26953 12.793C1.06641 11.918 0 10.25 0 8.58203C0 4.42578 3.47266 3.52344 7.875 3.46875V1.30859C7.875 0.734375 8.53125 0.433594 8.94141 0.789062L13.7539 4.91797C14.0547 5.21875 14.0547 5.68359 13.7539 5.95703Z" fill=""/>
                                                     </svg>    
                                                 </a>
                                             </div>
@@ -755,7 +757,9 @@
                                         <div class="comment-content">
                                             <div class="comment-content-top d-flex justify-content-between align-items-center">
                                                 <div class="commentor-info">
-                                                    <h4 class="commentor-name">Angel Maria</h4>
+                                                    <h4>
+                                                        <a href="" class="commentor-name">Angel Maria</a>
+                                                    </h4>
                                                     <div class="comment-meta">
                                                         <span class="comment-date-time">
                                                             20 minutes ago
@@ -764,8 +768,8 @@
                                                 </div>
                                                 <a href="" class="reply-btn d-flex align-items-center">
                                                     Reply
-                                                    <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M13.7539 5.95703L8.94141 10.0859C8.53125 10.4414 7.875 10.1406 7.875 9.59375V7.21484C3.60938 7.26953 1.80469 8.30859 3.03516 12.2734C3.17188 12.7109 2.625 13.0664 2.26953 12.793C1.06641 11.918 0 10.25 0 8.58203C0 4.42578 3.47266 3.52344 7.875 3.46875V1.30859C7.875 0.734375 8.53125 0.433594 8.94141 0.789062L13.7539 4.91797C14.0547 5.21875 14.0547 5.68359 13.7539 5.95703Z" fill="#1D2746"/>
+                                                    <svg width="15" height="14" viewBox="0 0 15 14" fill="#1D2746" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M13.7539 5.95703L8.94141 10.0859C8.53125 10.4414 7.875 10.1406 7.875 9.59375V7.21484C3.60938 7.26953 1.80469 8.30859 3.03516 12.2734C3.17188 12.7109 2.625 13.0664 2.26953 12.793C1.06641 11.918 0 10.25 0 8.58203C0 4.42578 3.47266 3.52344 7.875 3.46875V1.30859C7.875 0.734375 8.53125 0.433594 8.94141 0.789062L13.7539 4.91797C14.0547 5.21875 14.0547 5.68359 13.7539 5.95703Z" fill=""/>
                                                     </svg> 
                                                 </a>
                                             </div>
@@ -783,7 +787,9 @@
                                         <div class="comment-content">
                                             <div class="comment-content-top d-flex justify-content-between align-items-center">
                                                 <div class="commentor-info">
-                                                    <h4 class="commentor-name">Bessie Cooper</h4>
+                                                    <h4>
+                                                        <a href="" class="commentor-name">Bessie Cooper</a>
+                                                    </h4>
                                                     <div class="comment-meta">
                                                         <span class="comment-date-time">
                                                             47 minutes ago
@@ -792,8 +798,8 @@
                                                 </div>
                                                 <a href="" class="reply-btn d-flex align-items-center">
                                                     Reply
-                                                    <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M13.7539 5.95703L8.94141 10.0859C8.53125 10.4414 7.875 10.1406 7.875 9.59375V7.21484C3.60938 7.26953 1.80469 8.30859 3.03516 12.2734C3.17188 12.7109 2.625 13.0664 2.26953 12.793C1.06641 11.918 0 10.25 0 8.58203C0 4.42578 3.47266 3.52344 7.875 3.46875V1.30859C7.875 0.734375 8.53125 0.433594 8.94141 0.789062L13.7539 4.91797C14.0547 5.21875 14.0547 5.68359 13.7539 5.95703Z" fill="#1D2746"/>
+                                                    <svg width="15" height="14" viewBox="0 0 15 14" fill="#1D2746" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M13.7539 5.95703L8.94141 10.0859C8.53125 10.4414 7.875 10.1406 7.875 9.59375V7.21484C3.60938 7.26953 1.80469 8.30859 3.03516 12.2734C3.17188 12.7109 2.625 13.0664 2.26953 12.793C1.06641 11.918 0 10.25 0 8.58203C0 4.42578 3.47266 3.52344 7.875 3.46875V1.30859C7.875 0.734375 8.53125 0.433594 8.94141 0.789062L13.7539 4.91797C14.0547 5.21875 14.0547 5.68359 13.7539 5.95703Z" fill=""/>
                                                     </svg> 
                                                 </a>
                                             </div>
@@ -846,7 +852,7 @@
                                             </div>
 
                                             <div class="form-btn">
-                                                <a class="rt-form-submit-btn">
+                                                <a class="coolBeans rt-form-submit-btn">
                                                     Submit Comment
                                                 </a>
                                             </div>
