--- a/support-forum-home.html
+++ b/support-forum-home.html
@@ -210,7 +210,7 @@
                                                 </a>
                                                 <ul class="menu menu--sub" id="navMenus">
                                                     <li class="menu--item second-level">
-                                                        <a href="home.html" class="menu--link">
+                                                        <a href="index.html" class="menu--link">
                                                             Main Home
                                                         </a>
                                                     </li>
@@ -249,6 +249,16 @@
                                                             Single Element
                                                         </a>
                                                     </li>
+                                                    <li class="menu--item">
+                                                        <a href="two-columns.html" class="menu--link">
+                                                            Two Columns Page
+                                                        </a>
+                                                    </li>
+                                                    <li class="menu--item">
+                                                        <a href="three-columns.html" class="menu--link">
+                                                            Three Columns Page
+                                                        </a>
+                                                    </li>
                                                 </ul>
                                             </li>
                                             <li class="menu--item menu--item--has-child parent-menu">
@@ -279,16 +289,6 @@
                                                     </svg>
                                                 </a>
                                                 <ul class="menu menu--sub">
-                                                    <li class="menu--item">
-                                                        <a href="two-columns.html" class="menu--link">
-                                                            Two Columns Page
-                                                        </a>
-                                                    </li>
-                                                    <li class="menu--item">
-                                                        <a href="three-columns.html" class="menu--link">
-                                                            Three Columns Page
-                                                        </a>
-                                                    </li>
                                                     <li class="menu--item">
                                                         <a href="elements.html" class="menu--link">
                                                             Element Page
@@ -1097,7 +1097,7 @@
                                         <div class="rt-footer-link-list-wrapper">
                                             <div class="rt-footer-logo">
                                                 <a href="">
-                                                    <img src="images/logo/logo-3.svg" alt="logo-footer">
+                                                    <img src="images/logo/logo-7.svg" alt="logo-footer">
                                                 </a>
                                             </div>
                                             <p class="para-text">
