optimize js code

--- a/single-element.html
+++ b/single-element.html
@@ -766,7 +766,7 @@
 
                             <div class="col-md-7 col-lg-7 col-xl-6">
                                 <div class="content-wrapper">
-                                    <section id="elements" class="elements-info-layout">
+                                    <section id="elements" class="elements-info-layout layout-area">
                                         <div id="documentation-features" class="documentation-features widget-area">
                                             <div class="head-title-area d-flex align-items-center flex-wrap">
                                                 <div class="icon">
@@ -1446,7 +1446,7 @@
                                         </div>
                                     </section>
 
-                                    <section id="content" class="content-info-layout">
+                                    <section id="content" class="content-info-layout layout-area">
                                         <div class="main-heading-area">
                                             <h3 class="title">Content</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
@@ -1866,7 +1866,7 @@
                                         </div>
                                     </section>
 
-                                    <section id="layouts" class="layouts-info-layout">
+                                    <section id="layouts" class="layouts-info-layout layout-area">
                                         <div class="main-heading-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                             <h3 class="title">Layouts</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
@@ -1942,7 +1942,7 @@
                                         </div>
                                     </section>
 
-                                    <section id="change-logs" class="change-logs-info-layout">
+                                    <section id="change-logs" class="change-logs-info-layout layout-area">
                                         <div class="main-heading-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                             <h3 class="title">Change Logs</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
@@ -2434,7 +2434,7 @@
                                         </div>
                                     </section>
 
-                                    <section id="blog-post" class="blog-post-info-layout">
+                                    <section id="blog-post" class="blog-post-info-layout layout-area">
                                         <div class="main-heading-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                             <h3 class="title">Blog Post</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
