--- a/help-desk-home.html
+++ b/help-desk-home.html
@@ -30,9 +30,20 @@
 
 <body>
     <!-- start perloader -->
-    <!-- <div class="pre-loader" id="preloader">
-        <div class="loader"></div>
-    </div> -->
+    <div class="pre-loader" id="preloader">
+        <div class="loading-wrapper">
+            <!-- <div class="loading-text">LOADING</div> -->
+            <div class="loading-circle circle"></div>
+            <div class="loading-circle-small circle">
+                <div class="doc-icon">
+                    <div class="line wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="200ms"></div>
+                    <div class="line wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms"></div>
+                    <div class="line wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms"></div>
+                    <div class="line wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- end perloader -->
     
     <!-- Start main wrapper -->
@@ -1330,7 +1341,7 @@
                                         <div class="row">
                                             <div class="col-md-12 col-lg-6 col-xl-6">
                                                 <div class="testimonial-img-area d-none d-lg-block">
-                                                    <img src="images/testimonial/testimonial-img-1.png" alt="testimonial-img" class="wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                                    <img src="images/testimonial/testimonial-img-2.png" alt="testimonial-img" class="wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                                 </div>
                                             </div>
                                             <!-- col end -->
@@ -1347,7 +1358,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="author-info">
-                                                        <h3 class="name">Ford Stefen</h3>
+                                                        <h3 class="name">Ema Stefen</h3>
                                                         <p class="designation">Marketing Manager </p>
                                                     </div>
                                                 </div>
@@ -1359,7 +1370,7 @@
                                         <div class="row">
                                             <div class="col-md-12 col-lg-6 col-xl-6">
                                                 <div class="testimonial-img-area d-none d-lg-block">
-                                                    <img src="images/testimonial/testimonial-img-1.png" alt="testimonial-img" class="wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                                    <img src="images/testimonial/testimonial-img-3.png" alt="testimonial-img" class="wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                                 </div>
                                             </div>
                                             <!-- col end -->
